Make Rust crates build on stable

--- a/rust/vineyard-polars/Cargo.toml
+++ b/rust/vineyard-polars/Cargo.toml
@@ -26,7 +26,7 @@ itertools = { workspace = true }
 polars-arrow = { workspace = true }
 polars-core = { workspace = true }
 serde_json = { workspace = true }
-vineyard = { workspace = true }
+vineyard = { workspace = true, default-features = false }
 
 [dev-dependencies]
 spectral = { workspace = true }
