--- a/rust/vineyard/Cargo.toml
+++ b/rust/vineyard/Cargo.toml
@@ -11,7 +11,7 @@ edition = { workspace = true }
 readme = { workspace = true }
 
 [features]
-default = ["nightly"]
+default = []
 nightly = []
 
 [lib]
