feat: upgrade kubernetes operator to v1.29
Signed-off-by: Paul Rudin <paul@rudin.co.uk>

--- a/k8s/config/crd/bases/k8s.v6d.io_backups.yaml
+++ b/k8s/config/crd/bases/k8s.v6d.io_backups.yaml
@@ -3,8 +3,7 @@ apiVersion: apiextensions.k8s.io/v1
 kind: CustomResourceDefinition
 metadata:
   annotations:
-    controller-gen.kubebuilder.io/version: v0.8.0
-  creationTimestamp: null
+    controller-gen.kubebuilder.io/version: v0.16.4
   name: backups.k8s.v6d.io
 spec:
   group: k8s.v6d.io
@@ -55,6 +54,21 @@ spec:
                     - kind
                     - name
                     type: object
+                    x-kubernetes-map-type: atomic
+                  dataSourceRef:
+                    properties:
+                      apiGroup:
+                        type: string
+                      kind:
+                        type: string
+                      name:
+                        type: string
+                      namespace:
+                        type: string
+                    required:
+                    - kind
+                    - name
+                    type: object
                   resources:
                     properties:
                       limits:
@@ -97,7 +111,10 @@ spec:
                           type: string
                         type: object
                     type: object
+                    x-kubernetes-map-type: atomic
                   storageClassName:
+                    type: string
+                  volumeAttributesClassName:
                     type: string
                   volumeMode:
                     type: string
@@ -183,6 +200,7 @@ spec:
                           namespace:
                             type: string
                         type: object
+                        x-kubernetes-map-type: atomic
                       user:
                         type: string
                     required:
@@ -201,6 +219,7 @@ spec:
                           namespace:
                             type: string
                         type: object
+                        x-kubernetes-map-type: atomic
                       volumeID:
                         type: string
                     required:
@@ -223,6 +242,7 @@ spec:
                       uid:
                         type: string
                     type: object
+                    x-kubernetes-map-type: granular
                   csi:
                     properties:
                       controllerExpandSecretRef:
@@ -232,6 +252,7 @@ spec:
                           namespace:
                             type: string
                         type: object
+                        x-kubernetes-map-type: atomic
                       controllerPublishSecretRef:
                         properties:
                           name:
@@ -239,10 +260,19 @@ spec:
                           namespace:
                             type: string
                         type: object
+                        x-kubernetes-map-type: atomic
                       driver:
                         type: string
                       fsType:
                         type: string
+                      nodeExpandSecretRef:
+                        properties:
+                          name:
+                            type: string
+                          namespace:
+                            type: string
+                        type: object
+                        x-kubernetes-map-type: atomic
                       nodePublishSecretRef:
                         properties:
                           name:
@@ -250,6 +280,7 @@ spec:
                           namespace:
                             type: string
                         type: object
+                        x-kubernetes-map-type: atomic
                       nodeStageSecretRef:
                         properties:
                           name:
@@ -257,6 +288,7 @@ spec:
                           namespace:
                             type: string
                         type: object
+                        x-kubernetes-map-type: atomic
                       readOnly:
                         type: boolean
                       volumeAttributes:
@@ -306,6 +338,7 @@ spec:
                           namespace:
                             type: string
                         type: object
+                        x-kubernetes-map-type: atomic
                     required:
                     - driver
                     type: object
@@ -383,6 +416,7 @@ spec:
                           namespace:
                             type: string
                         type: object
+                        x-kubernetes-map-type: atomic
                       targetPortal:
                         type: string
                     required:
@@ -455,10 +489,12 @@ spec:
                                     type: object
                                   type: array
                               type: object
+                              x-kubernetes-map-type: atomic
                             type: array
                         required:
                         - nodeSelectorTerms
                         type: object
+                        x-kubernetes-map-type: atomic
                     type: object
                   persistentVolumeReclaimPolicy:
                     type: string
@@ -523,6 +559,7 @@ spec:
                           namespace:
                             type: string
                         type: object
+                        x-kubernetes-map-type: atomic
                       user:
                         type: string
                     required:
@@ -546,6 +583,7 @@ spec:
                           namespace:
                             type: string
                         type: object
+                        x-kubernetes-map-type: atomic
                       sslEnabled:
                         type: boolean
                       storageMode:
@@ -586,11 +624,14 @@ spec:
                           uid:
                             type: string
                         type: object
+                        x-kubernetes-map-type: atomic
                       volumeName:
                         type: string
                       volumeNamespace:
                         type: string
                     type: object
+                  volumeAttributesClassName:
+                    type: string
                   volumeMode:
                     type: string
                   vsphereVolume:
@@ -611,6 +652,11 @@ spec:
                 type: string
               vineyarddNamespace:
                 type: string
+            required:
+            - backupPath
+            - objecIDs
+            - vineyarddName
+            - vineyarddNamespace
             type: object
           status:
             properties:
@@ -622,9 +668,3 @@ spec:
     storage: true
     subresources:
       status: {}
-status:
-  acceptedNames:
-    kind: ""
-    plural: ""
-  conditions: []
-  storedVersions: []
