--- a/k8s/config/crd/bases/k8s.v6d.io_globalobjects.yaml
+++ b/k8s/config/crd/bases/k8s.v6d.io_globalobjects.yaml
@@ -3,8 +3,7 @@ apiVersion: apiextensions.k8s.io/v1
 kind: CustomResourceDefinition
 metadata:
   annotations:
-    controller-gen.kubebuilder.io/version: v0.8.0
-  creationTimestamp: null
+    controller-gen.kubebuilder.io/version: v0.16.4
   name: globalobjects.k8s.v6d.io
 spec:
   group: k8s.v6d.io
@@ -60,7 +59,9 @@ spec:
                 type: string
             required:
             - id
+            - name
             - signature
+            - typename
             type: object
           status:
             properties:
@@ -75,9 +76,3 @@ spec:
     storage: true
     subresources:
       status: {}
-status:
-  acceptedNames:
-    kind: ""
-    plural: ""
-  conditions: []
-  storedVersions: []
