--- a/k8s/config/crd/bases/k8s.v6d.io_localobjects.yaml
+++ b/k8s/config/crd/bases/k8s.v6d.io_localobjects.yaml
@@ -3,8 +3,7 @@ apiVersion: apiextensions.k8s.io/v1
 kind: CustomResourceDefinition
 metadata:
   annotations:
-    controller-gen.kubebuilder.io/version: v0.8.0
-  creationTimestamp: null
+    controller-gen.kubebuilder.io/version: v0.16.4
   name: localobjects.k8s.v6d.io
 spec:
   group: k8s.v6d.io
@@ -67,6 +66,7 @@ spec:
             required:
             - hostname
             - id
+            - name
             - signature
             type: object
           status:
@@ -82,9 +82,3 @@ spec:
     storage: true
     subresources:
       status: {}
-status:
-  acceptedNames:
-    kind: ""
-    plural: ""
-  conditions: []
-  storedVersions: []
