--- a/k8s/config/crd/bases/k8s.v6d.io_operations.yaml
+++ b/k8s/config/crd/bases/k8s.v6d.io_operations.yaml
@@ -3,8 +3,7 @@ apiVersion: apiextensions.k8s.io/v1
 kind: CustomResourceDefinition
 metadata:
   annotations:
-    controller-gen.kubebuilder.io/version: v0.8.0
-  creationTimestamp: null
+    controller-gen.kubebuilder.io/version: v0.16.4
   name: operations.k8s.v6d.io
 spec:
   group: k8s.v6d.io
@@ -48,6 +47,12 @@ spec:
                 type: integer
               type:
                 type: string
+            required:
+            - name
+            - require
+            - target
+            - timeoutSeconds
+            - type
             type: object
           status:
             properties:
@@ -59,9 +64,3 @@ spec:
     storage: true
     subresources:
       status: {}
-status:
-  acceptedNames:
-    kind: ""
-    plural: ""
-  conditions: []
-  storedVersions: []
