--- a/k8s/pkg/templates/operation/distributed-assembly-job.yaml
+++ b/k8s/pkg/templates/operation/distributed-assembly-job.yaml
@@ -42,6 +42,8 @@ spec:
           valueFrom:
             fieldRef:
               fieldPath: metadata.namespace
+        - name: VINEYARD_IPC_SOCKET
+          value: /var/run/vineyard.sock
         volumeMounts:
         - mountPath: /var/run
           name: vineyard-sock
